# camera_array_multitouch_cpp

./: .gitignore  BlobProcessor.cpp  CMakeLists.txt  CameraArray.sln  CameraArray.vcxproj  CameraArray.vcxproj.filters  Processor.h  README.md  Source.cpp  Transformer.cpp  packages.config
3D models/Inventor/: Camera Array.ipj
3D models/Inventor/Imported Components/raspberrypi_b_+_(assembly)/: raspberrypi_b_+_(assembly).htm
Debug/: CameraArray.ilk  vc120.idb
Debug/CameraArray.tlog/: CL.read.1.tlog  CL.write.1.tlog  CameraArray.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: BlobProcessor.h  CalibrationProcessor.h  CameraDevice.h  ClusterColorizerProcessor.h  ClusterProcessor.h  ContourProcessor.h  DBPoint.h  DBScanProcessor.h  FeatureContainer.h  Frame.h  FrameCache.h  HistoricMotionProcessor.h  ImageProc.h  MotionProcessor.h  MotionThreshold.h  Processor.h  SharedConcurrentQueue.h  Transformer.h
include/src/: HistoricMotionProcessor.cpp
reports/: clustering-optmized-regionsearch.diagsession  clustering-unoptimized-regionsearch.diagsession
src/: BlobProcessor.cpp  CMakeLists.txt  CalibrationProcessor.cpp  CameraDevice.cpp  ClusterColorizerProcessor.cpp  ClusterProcessor.cpp  ContourProcessor.cpp  DBPoint.cpp  DBScanProcessor.cpp  FeatureContainer.cpp  Frame.cpp  FrameCache.cpp  ImageProc.cpp  MotionProcessor.cpp  MotionThreshold.cpp  Source.cpp  Transformer.cpp
